per stasera basta così

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <base href="mio">
   <link rel="stylesheet" type="text/css" href="style.css">
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Rubik">
-  <link rel="icon" type="image/x-icon" href="foto/logo.png">
+  <link rel="icon" type="image/x-icon" href="images/logo.png">
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width">
 
@@ -14,7 +14,8 @@
 </head>
 <body>
   <h1> ciao  </h1>
-  <p> AaBbCc </p>
+  <p> un digital orto. what will your verse be? </p>
+
 <main>
 </main>
 </body>
