--- a/index.html
+++ b/index.html
@@ -1,22 +1,24 @@
 <!DOCTYPE html>
 <html lang="it">
 <head>
-  <base href="mio">
+  <title>digital orto</title>
+  <link rel="icon" type="image/x-icon" href="images/favicon.png">
   <link rel="stylesheet" type="text/css" href="style.css">
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Rubik">
-  <link rel="icon" type="image/x-icon" href="images/logo.png">
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width">
-
-  <title>mio</title>
-  <meta name="description" content="mio">
-  <meta name="author" content="Giacomo Da Ros">
-</head>
+  </head>
 <body>
+<main class="lineheight">
   <h1> ciao  </h1>
   <p> un digital orto. what will your verse be? </p>
-
-<main>
+  <a href="libri.html">libri </a>
+  <h3> da fare </h3>
+  <li> pagine </li>
+  <li> integrazioni salute </li>
+  <li> foto </li>
+  <li> articoli </li>
+  <li> libri </li>
 </main>
 </body>
 </html>
