--- a/foto.html
+++ b/foto.html
@@ -10,11 +10,14 @@
   </head>
 <body>
 <main class="lineheight">
-  <h1> ciao  </h1>
-  <p> un digital orto. what will your verse be? </p>
-  <a href="libri.html">libri </a>
-  <a href="robe.html">robe </a>
-  <a href="foto.html">foto</a>
+  <h1> foto  </h1>
+  <a href="index.html"> orto </a>
+  <p></p>
+<img src="images/foto.jpg" alt="">
+<p><br><br></p>
+<img src="images/2.jpg" alt="">
+<p><br><br></p>
+<img src="images/3.png" alt="">
 </main>
 </body>
 </html>
