--- a/libri.html
+++ b/libri.html
@@ -11,6 +11,7 @@
 <body>
 <main class="lineheight">
   <h1> libri  </h1>
+  <a href="index.html"> orto </a>
   <h3> 2022 </h3>
   <ol>
     <li> How the Internet Happened </li>
@@ -19,10 +20,32 @@
     <li> Spies, Lies, Algorithms </li>
     <li> Paura di sentire </li>
     <li> La Repubblica del Leone</li>
-    <li> <u>Un indovino mi disse</u> </li>
+    <li> <a href="kindle_exports/indovino.html">Un indovino mi disse</a> </li>
     <li> Il cavaliere inesistente </li>
     <li> A Moveable Feast </li>
     <li> Ametora </li>
+    <li> Cent'anni di solitudine </li>
+    <li> The Splendid and the Vile </li>
+    <li> The Long Way Home </li>
+    <li> Buonanotte, signor Lenin </li>
+    <li> <u>La chiave a stella</u> </li>
+    <li> After Steve </li>
+    <li> Creative Selection </li>
+    <li> The Impossible City </li>
+    <li> The Dream Machine </li>
+    <li> A Biography of the Pixel </li>
+    <li> The Cold War </li>
+    <li> Les Fleurs Bleues </li>
+    <li> The Last Man Who Knew Everything </li>
+    <li> <u>Hong Kong Diaries</u> </li>
+    <li> Whole Earth </li>
+    <li> Hitler's American Gamble </li>
+    <li> The Last Leopard </li>
+    <li> The Pixar Touch </li>
+    <li> Nervous Conditions </li>
+    <li> The Making of the Atomic Bomb </li>
+    <li> The Soul of a New Machine </li>
+    <li> <u> Why We Sleep </u> </li>
   </ol>
   <h3> 2021 </h3>
   <ol>
