non sto studiando

--- a/index.html
+++ b/index.html
@@ -13,8 +13,10 @@
   <h1> ciao  </h1>
   <p> un digital orto. what will your verse be? </p>
   <a href="libri.html">libri </a>
-  <a href="robe.html">robe </a>
-  <a href="foto.html">foto</a>
+  <br>
+  <a href="robe_lette.html">robe lette </a>
+  <br>
+  <a href="robe_viste.html">robe viste</a>
 </main>
 </body>
 </html>
