--- a/libri.html
+++ b/libri.html
@@ -37,7 +37,7 @@
     <li> The Cold War </li>
     <li> Les Fleurs Bleues </li>
     <li> The Last Man Who Knew Everything </li>
-    <li> <u>Hong Kong Diaries</u> </li>
+    <li> <a href="kindle_exports/hk_diaries.html">Hong Kong Diaries</a> </li>
     <li> Whole Earth </li>
     <li> Hitler's American Gamble </li>
     <li> The Last Leopard </li>
