--- a/robe_viste/foto.html
+++ b/robe_viste/foto.html
@@ -18,6 +18,8 @@
 <img src="../images/2.jpg" alt="">
 <p><br></p>
 <img src="../images/23_11_22_1.png" alt="">
+<p align='center'>Jacob E. Tovar</p>
+
 </main>
 </body>
 </html>
