--- a/index.html
+++ b/index.html
@@ -17,6 +17,9 @@
   <a href="robe_lette.html">robe lette </a>
   <br>
   <a href="robe_viste.html">robe viste</a>
+ <p> <br> </p>
+<img src="sfondo.jpeg" alt="">
+
 </main>
 </body>
 </html>
