--- a/index.html
+++ b/index.html
@@ -12,12 +12,10 @@
 <main class="lineheight">
   <h1> ciao  </h1>
   <p> un digital orto. what will your verse be? </p>
-  <a href="libri.html">libri </a>
-  <br>
-  <a href="robe_lette.html">robe lette </a>
-  <br>
-  <a href="robe_viste.html">robe viste</a>
- <p> <br> </p>
+ <p> qua i <a href="libri.html">libri</a>. qua altre <a href="robe_lette.html">robe lette</a> che mi sono piaciute. poi
+  <a href="robe_viste.html">robe più visuali</a> così so dove ritrovarle. </p>
+<p> qui sotto dove mi piacerebbe essere ora </p>
+<p> baci, <br> g </p>
 <img src="sfondo.jpeg" alt="">
 
 </main>
