--- a/libri.html
+++ b/libri.html
@@ -10,8 +10,9 @@
   </head>
 <body>
 <main class="lineheight">
-  <h1> libri  </h1>
-  <a href="index.html"> orto </a>
+  <h1> <a href="index.html">orto</a> > libri</h1>
+  
+  <p> tutti i libri divisi per anno. sottolineati quelli particolarmente belli. per qualcuno c'è il link a quello che ci ho evidenziato.
   <h3> 2022 </h3>
   <ol>
     <li> How the Internet Happened </li>
@@ -20,7 +21,7 @@
     <li> Spies, Lies, Algorithms </li>
     <li> Paura di sentire </li>
     <li> La Repubblica del Leone</li>
-    <li> <a href="kindle_exports/indovino.html">Un indovino mi disse</a> </li>
+    <li> <a href="kindle_exports/indovino.html"> <u> Un indovino mi disse </u></a> </li>
     <li> Il cavaliere inesistente </li>
     <li> A Moveable Feast </li>
     <li> Ametora </li>
@@ -37,7 +38,7 @@
     <li> The Cold War </li>
     <li> Les Fleurs Bleues </li>
     <li> The Last Man Who Knew Everything </li>
-    <li> <a href="kindle_exports/hk_diaries.html">Hong Kong Diaries</a> </li>
+    <li> <u><a href="kindle_exports/hk_diaries.html">Hong Kong Diaries</u></a> </li>
     <li> Whole Earth </li>
     <li> Hitler's American Gamble </li>
     <li> The Last Leopard </li>
