--- a/robe_lette.html
+++ b/robe_lette.html
@@ -11,8 +11,7 @@
 <body>
 
 <main class="lineheight">
-<h1> robe lette </h1>
-<a href="index.html"> orto </a>
+<h1> <a href="index.html">orto</a> > robe lette </h1>
 
 <p>The Rangers had a homecoming
 <br>In Harlem late last night
