--- a/robe_viste.html
+++ b/robe_viste.html
@@ -10,12 +10,10 @@
   </head>
 <body>
 <main class="lineheight">
-  <h1> robe viste  </h1>
-  <a href="index.html"> orto </a>
-  <br>
-  <a href="robe_viste/foto.html"> foto </a>
-  <br>
-  <a href="robe_viste/gd.html"> graphic design </a>
+  <h1> <a href="index.html">orto</a> > robe viste  </h1>
+  
+ <p> qua <a href="robe_viste/foto.html">foto</a>. poi
+  <a href="robe_viste/gd.html"> graphic design </a> (mainly pubblicità). </p>
 </main>
 </body>
 </html>
