--- a/robe_viste/foto.html
+++ b/robe_viste/foto.html
@@ -10,11 +10,9 @@
   </head>
 <body>
 <main class="lineheight">
-  <h1> foto  </h1>
-  <a href="../index.html"> orto </a>
-  <br>
-  <a href="../robe_viste.html"> robe viste </a>
-  <p><br></p>
+  <h1> <a href="../index.html">orto</a> >
+  <a href="../robe_viste.html">robe viste</a> > foto  </h1>
+  <p></p>
 <img src="../images/2.jpg" alt="">
 <p><br></p>
 <img src="../images/23_11_22_1.png" alt="">
