--- a/robe_viste/gd.html
+++ b/robe_viste/gd.html
@@ -10,10 +10,8 @@
   </head>
 <body>
 <main class="lineheight">
-  <h1> graphic design  </h1>
-  <a href="../index.html"> orto </a>
-<br>
-  <a href="../robe_viste.html"> robe viste </a>
+  <h1> <a href="../index.html">orto</a> >
+  <a href="../robe_viste.html">robe viste</a> > graphic design  </h1>
   <p><br></p>
 <img src="../images/foto.jpg" alt="">
 <p><br></p>
