--- a/libri.html
+++ b/libri.html
@@ -11,8 +11,10 @@
 <body>
 <main class="lineheight">
   <h1> <a href="index.html">orto</a> > libri</h1>
-  
-  <p> tutti i libri divisi per anno. sottolineati quelli particolarmente belli. per qualcuno c'è il link a quello che ci ho evidenziato.
+
+  <p> tutti i libri divisi per anno. sottolineati quelli particolarmente belli.
+    ogni tanto qualche quote che mi è piaciuta tanto da salvarla.
+    per qualcuno per cui due o tre non basterebbero c'è il link a tutto quello che ci ho evidenziato.
   <h3> 2022 </h3>
   <ol>
     <li> How the Internet Happened </li>
@@ -22,14 +24,16 @@
     <li> Paura di sentire </li>
     <li> La Repubblica del Leone</li>
     <li> <a href="kindle_exports/indovino.html"> <u> Un indovino mi disse </u></a> </li>
-    <li> Il cavaliere inesistente </li>
+    <li> <u> Il cavaliere inesistente </u> </li>
     <li> A Moveable Feast </li>
     <li> Ametora </li>
     <li> Cent'anni di solitudine </li>
     <li> The Splendid and the Vile </li>
     <li> The Long Way Home </li>
     <li> Buonanotte, signor Lenin </li>
-    <li> <u>La chiave a stella</u> </li>
+    <li> <u>La chiave a stella</u>
+      <p> <i> "vado a cercare una certa ragazza e la trovo, mi fa piacere rivederla
+        e la porto a cena al Cambio e mi sento grandioso." </i> </p></li>
     <li> After Steve </li>
     <li> Creative Selection </li>
     <li> The Impossible City </li>
@@ -46,20 +50,144 @@
     <li> Nervous Conditions </li>
     <li> The Making of the Atomic Bomb </li>
     <li> The Soul of a New Machine </li>
-    <li> <u> Why We Sleep </u> </li>
+    <li> <u> Why We Sleep </u> <p> <i> "Sixty years of scientific research prevent
+      me from accepting anyone who tells me that he or she can 'get by on just four
+      or five hours of sleep a night just fine.'" </i> </p> </li>
   </ol>
   <h3> 2021 </h3>
   <ol>
-    <li> JFK</li>
+    <li> <u>JFK</u></li>
     <li> Guns, Germs, and Steel</li>
-    <li> La chiave a stella</li>
+    <li> <u>La chiave a stella</u></li>
     <li> The World Beneath the Sands</li>
     <li> Roma senza Papa</li>
-    <li> The Bonfire of the Vanities</li>
+    <li> <u>The Bonfire of the Vanities</u></li>
     <li> The Story of Sushi</li>
     <li> Cavour</li>
     <li> A Concise History of Hong Kong</li>
     <li> Kaputt</li>
+    <li> Coriolanus</li>
+    <li> Do No Harm</li>
+    <li> Reasons to Stay Alive</li>
+    <li> China - The Bubble That Never Pops</li>
+    <li> American Pastoral</li>
+    <li> The Economic Consequences of the Peace</li>
+    <li> The Ascent of Money </li>
+    <li> The World of Yesterday </li>
+    <li> The Second World War</li>
+    <li> Range </li>
+    <li> Atomic Awakening</li>
+    <li> The Darkening Age</li>
+    <li> Nudge</li>
+    <li> <u>This Is How They Tell Me The World Ends</u></li>
+    <li> Digital Minimalism</li>
+    <li> <u>Il Conte di Montecristo</u></li>
+    <li> Animal Farm</li>
+    <li> <u>Il Gattopardo</u> </li>
+    <li> Io Sono il Potere</li>
+    <li> These Truths</li>
+  </ol>
+
+  <h3> 2020 </h3>
+  <ol>
+    <li> Scritto di notte</li>
+    <li> Il sogno di Solomeo </li>
+    <li> The One Device </li>
+    <li> Il mondo secondo Garp </li>
+    <li> Brave New World</li>
+    <li> De Profundis </li>
+    <li> Eremita a Parigi </li>
+    <li> <u> I conti con l'oste </u> </li>
+    <li> <u> Il castello dei destini incrociati </u> </li>
+    <li> L'Orlando Furioso di Calvino </li>
+    <li> The Ethical Capitalist </li>
+    <li> Uncanny Valley </li>
+    <li> Ghettos du Gotha </li>
+    <li> The Mysterious Affair at Olivetti </li>
+    <li> <u> La casa degli spiriti </u></li>
+    <li> I Leoni di Sicilia </li>
+    <li> The Italians </li>
+    <li> <u> The Toyota Way </u> </li>
+    <li> <u> L'Io della mente </u></li>
+    <li> Ovedressed </li>
+    <li> La Peste</li>
+    <li> Sapiens</li>
+    <li> Capitalismo immateriale </li>
+    <li> The Geography of Thought </li>
+    <li> <u>Business Adventures</u></li>
+    <li> The Box</li>
+    <li> <u>Why Nations Fail</u></li>
+    <li> The Age of Surveillance Capitalism </li>
+    <li> <u>Liar's Poker</u> </li>
+    <li> Le città dell'uomo</li>
+    <li> Let my people go surfing</li>
+    <li> Elon Musk</li>
+    <li> The Hitchhiker's Guide to the Galaxy </li>
+    <li> Il libro di sabbia </li>
+    <li> 21 Lessons for the 21st Century </li>
+    <li> Homo Deus </li>
+    <li> The Force of Destiny </li>
+    <li> Insanely Great - The Life and Times of Macintosh </li>
+    <li> On Immunity </li>
+    <li> Ricordi </li>
+    <li> Quiet </li>
+    <li> Tremonti: istruzioni per il disuso </li>
+    <li> Leonardo </li>
+    <li> Privilege </li>
+    <li> Midnight's Children </li>
+    <li> Quer pasticciaccio brutto de via Merulana </li>
+    <li> Riccardino </li>
+    <li> <u> Postwar </u> </li>
+    <li> <u> Il Gattopardo </u></li>
+    <li> Palomar </li>
+    <li> The Ominvore's Dilemma </li>
+    <li> All the President's Men</li>
+    <li> What the Dormouse Said </li>
+    <li> Eichmann in Jerusalem </li>
+    <li> The Coddling of the American Mind </li>
+    <li> Hackers </li>
+    <li> <u>Enlightenment Now</u></li>
+    <li> L'Esperimento </li>
+    <li> L'Esecuzione </li>
+    <li> Limits to Growth </li>
+  </ol>
+
+  <h3> 2019 </h3>
+  <ol>
+    <li> <u>Il cavaliere inesistente </u></li>
+    <li> Le Cosmicomiche </li>
+    <li> Il sistema periodico </li>
+    <li> <u>L'Odissea </u></li>
+    <li> <u> I fiori blu </u></li>
+    <li> The Second World War </li>
+    <li> Esercizi di Stile</li>
+    <li> Geni, popoli e lingue</li>
+    <li> <u> Finzioni </u></li>
+    <li> Il sentiero dei nidi di ragno </li>
+    <li> Sette brevi lezioni di fisica</li>
+    <li> L'ordine del tempo </li>
+    <li> Amleto </li>
+    <li> Le mie prime convinzioni </li>
+    <li> L'idioma degli argentini </li>
+    <li> Le mie risposte alle grandi domande </li>
+    <li> I sette peccati capitali dell'economia italiana </li>
+    <li> <u> Macbeth </u> </li>
+    <li> Socrate </li>
+    <li> <u> La chiave a stella </u> </li>
+    <li> L'Aleph </li>
+    <li> Italiani di domani </li>
+    <li> Re Lear </li>
+    <li> Italians - Il giro del mondo in ottanta pizze </li>
+    <li> Italiani si rimane </li>
+    <li> <u>Lettere a Lucilio</u></li>
+    <li> <u>Marchionne</u></li>
+    <li> Bugatti Lotus Thriller</li>
+    <li> I vagabondi</li>
+    <li> Il vecchio e il mare</li>
+    <li> Di là dal fiume e tra gli alberi</li>
+    <li> Venezia è un pesce </li>
+    <li> The Great Gatsby </li>
+    <li> Cromorama </li>
   </ol>
 </main>
 </body>
