--- a/robe_lette.html
+++ b/robe_lette.html
@@ -13,6 +13,14 @@
 <main class="lineheight">
 <h1> <a href="index.html">orto</a> > robe lette </h1>
 
+<p>Che cosa era Enrico Mattei? Un avventuriero? Un grande patriota? Uno di quegli italiani imprendibili, indefinibili, che sanno entrare in tutte le parti, capaci di grandissimo charme come di grandissimo furore, generosi ma con una memoria di elefante per le offese subite, abili nell'usare il denaro ma quasi senza toccarlo, sopra le parti ma capaci di usarle, cinici ma per un grande disegno...</p>
+
+<p align='right'> G. Bocca</p>
+
+<p><br></p>
+<img src="images/macchine.jpeg" alt="">
+<p><br></p>
+
 <p>The Rangers had a homecoming
 <br>In Harlem late last night
 <br>And the Magic Rat drove his sleek machine
@@ -33,7 +41,7 @@
   none of those thoughts that spoil friendship: ‘What did they think of us?’—‘Did
   we make a mistake and say something tactless?’—‘Did they like us?’—nor is there
   the anxiety of being forgotten because of displacement by someone else.”</p>
-  
+
 <p align='right'> C. Dovey, <i>Can Reading Make You Happier?</i>, The New Yorker</p>
 
 
