--- a/robe_viste/gd.html
+++ b/robe_viste/gd.html
@@ -13,7 +13,11 @@
   <h1> <a href="../index.html">orto</a> >
   <a href="../robe_viste.html">robe viste</a> > graphic design  </h1>
   <p><br></p>
+<img src="../images/chandigarh.jpeg" alt="">
+<p><br></p>
 <img src="../images/foto.jpg" alt="">
+<p><br></p>
+<img src="../images/diventare_macbeth.gif" alt="">
 <p><br></p>
 <img src="../images/3.png" alt="">
 </main>
