--- a/index.html
+++ b/index.html
@@ -14,10 +14,12 @@
   <p> un digital orto. what will your verse be? </p>
  <p> l’orto serve a me per raccogliere un po’ dei dati che creo e tenerli in un posto solo. qua i <a href="libri.html">libri</a>. qua altre <a href="robe_lette.html">robe lette</a> che mi sono piaciute. poi
   <a href="robe_viste.html">robe più visuali</a> così so dove ritrovarle. in <a href="https://open.spotify.com/playlist/37i9dQZF1Epm90W746OUYj?si=F1r2sYjcQteNSdW2ttTu4g">questa playlist</a> quello che sto ascoltando ora. </p>
-<p> qui sotto dove mi piacerebbe essere ora.</p>
+
 <p> baci, <br> g </p>
-<img src="sfondo.jpeg" alt="">
-<p align='center'> Dragon's Back, Hong Kong </p>
+
+<p style="font-family: iA"> <br>Così sempre corre il giovane verso la donna: ma è davvero amore per lei a spingerlo?
+O non è amore soprattutto di sé, ricerca d’una certezza d’esserci che solo la donna gli può dare?
+</p>
 
 
 </main>
