mi ero dimenticato

--- a/index.html
+++ b/index.html
@@ -21,6 +21,8 @@
 O non è amore soprattutto di sé, ricerca d’una certezza d’esserci che solo la donna gli può dare?
 </p>
 
+<p align='right'> I. Calvino, <i> Il Cavaliere Inesistente </i><br></p>
+
 
 </main>
 </body>
