--- a/libri.html
+++ b/libri.html
@@ -53,6 +53,7 @@
     <li> <u> Why We Sleep </u> <p> <i> "Sixty years of scientific research prevent
       me from accepting anyone who tells me that he or she can 'get by on just four
       or five hours of sleep a night just fine.'" </i> </p> </li>
+    <li> Why Bob Dylan Matters </li>
   </ol>
   <h3> 2021 </h3>
   <ol>
