--- a/index.html
+++ b/index.html
@@ -17,11 +17,11 @@
 
 <p> baci, <br> g </p>
 
-<p style="font-family: iA"> <br>Così sempre corre il giovane verso la donna: ma è davvero amore per lei a spingerlo?
-O non è amore soprattutto di sé, ricerca d’una certezza d’esserci che solo la donna gli può dare?
+<p style="font-family: iA"> <br>He tried to shoot his way through life with a couple of guns
+  and he lost... But he tried
 </p>
 
-<p align='right'> I. Calvino, <i> Il Cavaliere Inesistente </i><br></p>
+<p align='right'> W. Guthrie, <i> Jesse James </i><br></p>
 
 
 </main>
