--- a/index.html
+++ b/index.html
@@ -17,11 +17,12 @@
 
 <p> baci, <br> g </p>
 
-<p style="font-family: iA"> <br>He tried to shoot his way through life with a couple of guns
-  and he lost... But he tried
+<p style="font-family: iA"> <br>“Something about the interior life of a computer
+  remains infinitely interesting to me; it’s not romantic, but it is a romance,
+  you flip a bunch of microscopic switches really fast and culture pours out.”
 </p>
 
-<p align='right'> W. Guthrie, <i> Jesse James </i><br></p>
+<p align='right'> P. Ford, <i> Why I Still Love Tech </i><br></p>
 
 
 </main>
