--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
 <p> baci, <br> g </p>
 
 <p style="font-family: iA"> <br>“Something about the interior life of a computer
-  remains infinitely interesting to me; it’s not romantic, but it is a romance,
-  you flip a bunch of microscopic switches really fast and culture pours out.”
+  remains infinitely interesting to me; it’s not romantic, but it is a romance.
+  You flip a bunch of microscopic switches really fast and culture pours out.”
 </p>
 
 <p align='right'> P. Ford, <i> Why I Still Love Tech </i><br></p>
