--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
 <p> baci, <br> g </p>
 
-<p style="font-family: iA"> <br>“Something about the interior life of a computer
+<p style="font-family: iA", align='left'> <br>“Something about the interior life of a computer
   remains infinitely interesting to me; it’s not romantic, but it is a romance.
   You flip a bunch of microscopic switches really fast and culture pours out.”
 </p>
