--- a/index.html
+++ b/index.html
@@ -17,12 +17,12 @@
 
 <p> baci, <br> g </p>
 
-<p style="font-family: iA", align='left'> <br>“Something about the interior life of a computer
+<p style="font-family: iA; font-size:1.1rem", align='left'> <br>“Something about the interior life of a computer
   remains infinitely interesting to me; it’s not romantic, but it is a romance.
   You flip a bunch of microscopic switches really fast and culture pours out.”
 </p>
 
-<p align='right'> P. Ford, <i> Why I Still Love Tech </i><br></p>
+<p style="font-size:1.1rem", align='right'> P. Ford, <i> Why I Still Love Tech </i><br></p>
 
 
 </main>
