--- a/libri.html
+++ b/libri.html
@@ -54,6 +54,7 @@
       me from accepting anyone who tells me that he or she can 'get by on just four
       or five hours of sleep a night just fine.'" </i> </p> </li>
     <li> Why Bob Dylan Matters </li>
+    <li> Deng Xiaoping and the Transformation of China </li>
   </ol>
   <h3> 2021 </h3>
   <ol>
