--- a/libri.html
+++ b/libri.html
@@ -19,21 +19,28 @@
   <ol>
     <li> How the Internet Happened </li>
     <li> The Raging 2020s </li>
-    <li> The Triumph of Cristianity </li>
+    <li> The Triumph of Christianity </li>
     <li> Spies, Lies, Algorithms </li>
     <li> Paura di sentire </li>
     <li> La Repubblica del Leone</li>
-    <li> <a href="kindle_exports/indovino.html"> <u> Un indovino mi disse </u></a> </li>
-    <li> <u> Il cavaliere inesistente </u> </li>
+    <li> <a href="kindle_exports/indovino.html"> <u> Un indovino mi disse </u></a> <p> <i>
+      "Ah, potessi andare da quell’indovino a Ulan Bator!" si dice probabilmente un abitante
+      di Giava e così mantiene viva la speranza di un posto dove certamente c’è la chiave
+      della sua felicità.
+ </i> </p></li>
+    <li> <u><a href="kindle_exports/cavaliere_inesistente.html">Il cavaliere inesistente</u></a>
+      <p> <i> Ma anch’io quello che voglio è soltanto l’essere uno che sa quello che vuole!
+ </i> </p></li>
     <li> A Moveable Feast </li>
-    <li> Ametora </li>
+    <li> <u>Ametora: How Japan Saved American Style </u> </li>
     <li> Cent'anni di solitudine </li>
-    <li> The Splendid and the Vile </li>
+    <li> <u><a href="kindle_exports/splendid_vile.html">The Splendid and the Vile</u></a>
+    <p> <i> At least one brand of toilet paper was also in perilously short supply, as the king himself discovered. He managed to sidestep this particular scarcity by arranging shipments direct from the British embassy in Washington, D.C. With kingly discretion, he wrote to his ambassador, “We are getting short of a certain type of paper which is made in America and is unprocurable here. A packet or two of 500 sheets at intervals would be most acceptable. You will understand this and its name begins with B!!!” </i></p></li>
     <li> The Long Way Home </li>
     <li> Buonanotte, signor Lenin </li>
     <li> <u>La chiave a stella</u>
-      <p> <i> "vado a cercare una certa ragazza e la trovo, mi fa piacere rivederla
-        e la porto a cena al Cambio e mi sento grandioso." </i> </p></li>
+      <p> <i> vado a cercare una certa ragazza e la trovo, mi fa piacere rivederla
+        e la porto a cena al Cambio e mi sento grandioso. </i> </p></li>
     <li> After Steve </li>
     <li> Creative Selection </li>
     <li> The Impossible City </li>
@@ -41,20 +48,25 @@
     <li> A Biography of the Pixel </li>
     <li> The Cold War </li>
     <li> Les Fleurs Bleues </li>
-    <li> The Last Man Who Knew Everything </li>
+    <li> The Last Man Who Knew Everything
+      <p> <i> Not a philosopher. Passion for clarity.
+        He was simply unable to let things be foggy.
+        Since they always are, this kept him pretty active. </i> </p></li>
     <li> <u><a href="kindle_exports/hk_diaries.html">Hong Kong Diaries</u></a> </li>
-    <li> Whole Earth </li>
+    <li> <a href="kindle_exports/whole_earth.html">Whole Earth</a> <p> <i> The implication, of course, was that
+    computing was the next thing after LSD.</i> </p> </li>
     <li> Hitler's American Gamble </li>
     <li> The Last Leopard </li>
     <li> The Pixar Touch </li>
     <li> Nervous Conditions </li>
     <li> The Making of the Atomic Bomb </li>
     <li> The Soul of a New Machine </li>
-    <li> <u> Why We Sleep </u> <p> <i> "Sixty years of scientific research prevent
+    <li> <u><a href="kindle_exports/why_we_sleep.html">Why We Sleep</u></a> <p> <i> Sixty years of scientific research prevent
       me from accepting anyone who tells me that he or she can 'get by on just four
-      or five hours of sleep a night just fine.'" </i> </p> </li>
+      or five hours of sleep a night just fine.'</i> </p> </li>
     <li> Why Bob Dylan Matters </li>
     <li> Deng Xiaoping and the Transformation of China </li>
+    <li> The Intel Trinity </li>
   </ol>
   <h3> 2021 </h3>
   <ol>
