content, sistemato interlinea titoli

--- a/libri.html
+++ b/libri.html
@@ -9,9 +9,8 @@
   <meta name="viewport" content="width=device-width">
   </head>
 <body>
+  <h1 align="left"> <a href="index.html">orto</a> > libri</h1>
 <main class="lineheight">
-  <h1> <a href="index.html">orto</a> > libri</h1>
-
   <p> tutti i libri divisi per anno. sottolineati quelli particolarmente belli.
     ogni tanto qualche quote che mi è piaciuta tanto da salvarla.
     per qualcuno per cui due o tre non basterebbero c'è il link a tutto quello che ci ho evidenziato.
@@ -31,14 +30,22 @@
     <li> <u><a href="kindle_exports/cavaliere_inesistente.html">Il cavaliere inesistente</u></a>
       <p> <i> Ma anch’io quello che voglio è soltanto l’essere uno che sa quello che vuole!
  </i> </p></li>
-    <li> A Moveable Feast </li>
+    <li> A Moveable Feast <p> <i> going down the stairs when i had worked well,
+      and that needed luck as well as discipline, was a wonderful feeling and i
+      was free then to walk anywhere in paris. </p> </i> </li>
     <li> <u>Ametora: How Japan Saved American Style </u> </li>
     <li> Cent'anni di solitudine </li>
     <li> <u><a href="kindle_exports/splendid_vile.html">The Splendid and the Vile</u></a>
-    <p> <i> At least one brand of toilet paper was also in perilously short supply, as the king himself discovered. He managed to sidestep this particular scarcity by arranging shipments direct from the British embassy in Washington, D.C. With kingly discretion, he wrote to his ambassador, “We are getting short of a certain type of paper which is made in America and is unprocurable here. A packet or two of 500 sheets at intervals would be most acceptable. You will understand this and its name begins with B!!!” </i></p></li>
+    <p> <i> At least one brand of toilet paper was also in perilously short supply,
+      as the king himself discovered. He managed to sidestep this particular
+      scarcity by arranging shipments direct from the British embassy in
+      Washington, D.C. With kingly discretion, he wrote to his ambassador, “We
+      are getting short of a certain type of paper which is made in America and
+      is unprocurable here. A packet or two of 500 sheets at intervals would be
+      most acceptable. You will understand this and its name begins with B!!!” </i></p></li>
     <li> The Long Way Home </li>
     <li> Buonanotte, signor Lenin </li>
-    <li> <u>La chiave a stella</u>
+    <li> <u><a href="kindle_exports/chiave_stella.html">La chiave a stella</u></a>
       <p> <i> vado a cercare una certa ragazza e la trovo, mi fa piacere rivederla
         e la porto a cena al Cambio e mi sento grandioso. </i> </p></li>
     <li> After Steve </li>
@@ -53,7 +60,8 @@
         He was simply unable to let things be foggy.
         Since they always are, this kept him pretty active. </i> </p></li>
     <li> <u><a href="kindle_exports/hk_diaries.html">Hong Kong Diaries</u></a> </li>
-    <li> <a href="kindle_exports/whole_earth.html">Whole Earth</a> <p> <i> The implication, of course, was that
+    <li> <a href="kindle_exports/whole_earth.html">Whole Earth</a> <p> <i>
+      The implication, of course, was that
     computing was the next thing after LSD.</i> </p> </li>
     <li> Hitler's American Gamble </li>
     <li> The Last Leopard </li>
@@ -61,7 +69,8 @@
     <li> Nervous Conditions </li>
     <li> The Making of the Atomic Bomb </li>
     <li> The Soul of a New Machine </li>
-    <li> <u><a href="kindle_exports/why_we_sleep.html">Why We Sleep</u></a> <p> <i> Sixty years of scientific research prevent
+    <li> <u><a href="kindle_exports/why_we_sleep.html">Why We Sleep</u></a> <p> <i>
+      Sixty years of scientific research prevent
       me from accepting anyone who tells me that he or she can 'get by on just four
       or five hours of sleep a night just fine.'</i> </p> </li>
     <li> Why Bob Dylan Matters </li>
@@ -70,7 +79,7 @@
   </ol>
   <h3> 2021 </h3>
   <ol>
-    <li> <u>JFK</u></li>
+    <li> <u><a href="kindle_exports/jfk.html">JFK - Coming of Age in the American Century</u></a></li>
     <li> Guns, Germs, and Steel</li>
     <li> <u>La chiave a stella</u></li>
     <li> The World Beneath the Sands</li>
@@ -81,7 +90,7 @@
     <li> A Concise History of Hong Kong</li>
     <li> Kaputt</li>
     <li> Coriolanus</li>
-    <li> Do No Harm</li>
+    <li> <u>Do No Harm</u></li>
     <li> Reasons to Stay Alive</li>
     <li> China - The Bubble That Never Pops</li>
     <li> American Pastoral</li>
@@ -97,7 +106,7 @@
     <li> Digital Minimalism</li>
     <li> <u>Il Conte di Montecristo</u></li>
     <li> Animal Farm</li>
-    <li> <u>Il Gattopardo</u> </li>
+    <li> <u><a href="kindle_exports/gattopardo.html">Il Gattopardo</u></a> </li>
     <li> Io Sono il Potere</li>
     <li> These Truths</li>
   </ol>
@@ -187,7 +196,7 @@
     <li> I sette peccati capitali dell'economia italiana </li>
     <li> <u> Macbeth </u> </li>
     <li> Socrate </li>
-    <li> <u> La chiave a stella </u> </li>
+    <li> <u><a href="kindle_exports/chiave_stella.html">La chiave a stella</u></a> </li>
     <li> L'Aleph </li>
     <li> Italiani di domani </li>
     <li> Re Lear </li>
