--- a/robe_viste.html
+++ b/robe_viste.html
@@ -9,9 +9,9 @@
   <meta name="viewport" content="width=device-width">
   </head>
 <body>
+  <h1 align="left"> <a href="index.html">orto</a> > robe viste  </h1>
 <main class="lineheight">
-  <h1> <a href="index.html">orto</a> > robe viste  </h1>
-  
+
  <p> qua <a href="robe_viste/foto.html">foto</a>. poi
   <a href="robe_viste/gd.html"> graphic design </a> (mainly pubblicità). </p>
 </main>
