--- a/robe_viste/foto.html
+++ b/robe_viste/foto.html
@@ -8,10 +8,9 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width">
   </head>
-<body>
-<main class="lineheight">
-  <h1> <a href="../index.html">orto</a> >
+<body>  <h1 align="left"> <a href="../index.html">orto</a> >
   <a href="../robe_viste.html">robe viste</a> > foto  </h1>
+<main class="lineheight">
   <p><br></p>
 <img src="../images/2.jpg" alt="">
 <p><br></p>
