--- a/libri.html
+++ b/libri.html
@@ -76,6 +76,7 @@
     <li> Why Bob Dylan Matters </li>
     <li> Deng Xiaoping and the Transformation of China </li>
     <li> The Intel Trinity </li>
+    <li> Chip War </li>
   </ol>
   <h3> 2021 </h3>
   <ol>
