--- a/libri.html
+++ b/libri.html
@@ -14,6 +14,12 @@
   <p> tutti i libri divisi per anno. sottolineati quelli particolarmente belli.
     ogni tanto qualche quote che mi è piaciuta tanto da salvarla.
     per qualcuno per cui due o tre non basterebbero c'è il link a tutto quello che ci ho evidenziato.
+
+  <h3> 2023 </h3>
+  <ol>
+      <li> Murmurs of Earth: The Voyager Interstellar Record</li>
+  </ol>
+
   <h3> 2022 </h3>
   <ol>
     <li> How the Internet Happened </li>
