--- a/index.html
+++ b/index.html
@@ -17,8 +17,15 @@
 
 <p> baci, <br> g </p>
 
-<img src="peace.jpeg" alt="">
-<p style="font-size:1.1rem", align='center'> sentendomi festivo </i><br></p>
+
+
+<p style="font-family: iA; font-size: 1.15rem"> <br>We cast this message into the cosmos [...]: This is a present from a small
+  distant world, a token of our sounds, our science, our images, our music, our
+  thoughts, and our feelings. We are attempting to survive our time so we may live
+  into yours. We hope some day, having solved the problems we face, to join a community
+  of galactic civilizations. This record represents our hope and our determination and
+  our goodwill in a vast and awesome universe.
+<p style="font-size: 1.15rem"; align='right'> Jimmy Carter, <i>Voyager Golden Record</i><br></p>
 
 
 </main>
