nuovo libro; modifiche prima pagina

--- a/index.html
+++ b/index.html
@@ -15,16 +15,23 @@
  <p> l’orto serve a me per raccogliere un po’ dei dati che creo e tenerli in un posto solo. qua i <a href="libri.html">libri</a>. qua altre <a href="robe_lette.html">robe lette</a> che mi sono piaciute. poi
   <a href="robe_viste.html">robe più visuali</a> così so dove ritrovarle. in <a href="https://open.spotify.com/playlist/37i9dQZF1Epm90W746OUYj?si=F1r2sYjcQteNSdW2ttTu4g">questa playlist</a> quello che sto ascoltando ora. </p>
 
-<p> baci, <br> g </p>
+<p> baci, <br> g <br></p>
+
+<p style="font-size: 1.15rem"; align='left'> <br> 16 gennaio 2023</i></p>
+<p style="font-family: iA; font-size: 1.15rem"> going down the stairs when
+  i had worked well, and that needed luck as well as discipline, was a wonderful
+  feeling and i was free then to walk anywhere in paris.
+</p>
+<p style="font-size: 1.15rem"; align='right'> Ernest Hemingway, <i>A Moveable Feast</i><br></p>
 
 
-
-<p style="font-family: iA; font-size: 1.15rem"> <br>We cast this message into the cosmos [...]: This is a present from a small
+<p style="font-size: 1.15rem"; align='left'> 8 gennaio 2023</i></p>
+<p style="font-family: iA; font-size: 1.15rem"> We cast this message into the cosmos [...]: This is a present from a small
   distant world, a token of our sounds, our science, our images, our music, our
   thoughts, and our feelings. We are attempting to survive our time so we may live
   into yours. We hope some day, having solved the problems we face, to join a community
   of galactic civilizations. This record represents our hope and our determination and
-  our goodwill in a vast and awesome universe.
+  our goodwill in a vast and awesome universe. </p>
 <p style="font-size: 1.15rem"; align='right'> Jimmy Carter, <i>Voyager Golden Record</i><br></p>
 
 
