--- a/libri.html
+++ b/libri.html
@@ -18,6 +18,8 @@
   <h3> 2023 </h3>
   <ol>
       <li> Murmurs of Earth: The Voyager Interstellar Record</li>
+      <li> <u> The Information: A History, A Theory, A Flood </u> </li>
+
   </ol>
 
   <h3> 2022 </h3>
