--- a/robe_lette.html
+++ b/robe_lette.html
@@ -12,6 +12,8 @@
   <h1 align=left> <a href="index.html">orto</a> > robe lette </h1>
 <main class="lineheight">
 
+  <p><a href="wartime.html">C.S. Lewis, <i>Learning in War-Time</i></a> </p>
+
 <p>Che cosa era Enrico Mattei? Un avventuriero? Un grande patriota? Uno di quegli italiani imprendibili, indefinibili, che sanno entrare in tutte le parti, capaci di grandissimo charme come di grandissimo furore, generosi ma con una memoria di elefante per le offese subite, abili nell'usare il denaro ma quasi senza toccarlo, sopra le parti ma capaci di usarle, cinici ma per un grande disegno...</p>
 
 <p align='right'> G. Bocca</p>
