--- a/libri.html
+++ b/libri.html
@@ -20,6 +20,7 @@
       <li> Murmurs of Earth: The Voyager Interstellar Record</li>
       <li> <u> The Information: A History, A Theory, A Flood </u> </li>
       <li>The Man from the Future</li>
+      <li>The Smartest Guys in the Room</li>
   </ol>
 
   <h3> 2022 </h3>
