--- a/libri.html
+++ b/libri.html
@@ -21,6 +21,7 @@
       <li> <u> The Information: A History, A Theory, A Flood </u> </li>
       <li>The Man from the Future</li>
       <li>The Smartest Guys in the Room</li>
+      <li>Reading in the Brain</li>
   </ol>
 
   <h3> 2022 </h3>
