--- a/index.html
+++ b/index.html
@@ -17,6 +17,12 @@
 
 <p> baci, <br> g <br></p>
 
+<p style="font-size: 1.15rem"; align='left'> <br> 14 marzo 2023</i></p>
+<p style="font-size: 1.15rem"> <a href="mille_euro.html">mille euro</a>:
+  ho dato duemila euro (mille miei, mille adam) all'idraulico. questi i pensieri razionali e
+  irrazionali prima di sapere se/quanto la proprietaria pagherà.
+</p>
+
 <p style="font-size: 1.15rem"; align='left'> <br> 16 gennaio 2023</i></p>
 <p style="font-family: iA; font-size: 1.15rem"> going down the stairs when
   i had worked well, and that needed luck as well as discipline, was a wonderful
