--- a/mille_euro.html
+++ b/mille_euro.html
@@ -50,7 +50,7 @@
          <li>allora perché fa così male? tante cose. però è il dolore di growing up.
          </li></ul>
     
-    interessante farsi terapia da soli.</p>
+    interessante farsi terapia da soli. vado a correre</p>
 </main>
 </body>
 </html>
