--- a/mille_euro.html
+++ b/mille_euro.html
@@ -45,6 +45,7 @@
         <ul><li>non avrei potuto fare diversamente. il bagno era distrutto e già 240 li avevo dati. adam non c'era. </li>
         <li>proprietaria probabilmente pagherà una parte </li>
         <li>ma soprattutto, non avrei fatto niente con quei soldi. sarebbero rimasti lì per emergenza. </li>
+        <li> magari servirà a muovermi per rifarne un po'. potrebbe essere interessante. </li> 
         <li>posso imparare qualcosa da questa esperienza? probabilmente sì. bisogna avere pazienza e cercare di capire bene che succede. </li>
         <li>mille euro non sono nulla nel grand scheme of things. anche se dovrò prenderne qualcuno in più in prestito pazienza, li pagherò con calma. magari - anzi, sicuramente - quello che ho imparato li ripagherà prima o poi.    </li>
          <li>allora perché fa così male? tante cose. però è il dolore di growing up.
