--- a/robe_viste/gd.html
+++ b/robe_viste/gd.html
@@ -13,6 +13,7 @@
   <a href="../robe_viste.html">robe viste</a> > graphic design</h1>
 <main class="lineheight">
 <p><br></p>
+<img src="../images/scrivania.png" alt=""><p><br></p>
 <img src="../images/nyt.jpeg" alt=""><p><br></p>
 <img src="../images/marteenleon2.png" alt=""><p><br></p>
 <img src="../images/marteenleon1.png" alt=""><p><br></p>
