--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
     <h1> ciao  </h1>
 <main class="lineheight">
   <p> un digital orto. what will your verse be? </p>
- <p> l’orto serve a me per raccogliere un po’ dei dati che creo e tenerli in un posto solo. qua i <a href="libri.html">libri</a>. qua altre <a href="robe_lette.html">robe lette</a> che mi sono piaciute. poi
-  <a href="robe_viste.html">robe più visuali</a> così so dove ritrovarle. in <a href="https://open.spotify.com/playlist/37i9dQZF1Epm90W746OUYj?si=F1r2sYjcQteNSdW2ttTu4g">questa playlist</a> quello che sto ascoltando ora. </p>
+ <p> l’orto serve a me per raccogliere un po’ dei dati che creo e tenerli in un posto solo. qua i <a href="libri.html">libri</a>. qua tutto il resto delle <a href="articoli.html">robe che leggo</a>. qua un po' di <a href="quote.html">quote più o meno lunghe</a> che mi sono piaciute. poi
+  <a href="robe_visten.html">roba che vedo</a> così so dove ritrovarla. in <a href="https://open.spotify.com/playlist/37i9dQZF1Epm90W746OUYj?si=F1r2sYjcQteNSdW2ttTu4g">questa playlist</a> quello che sto ascoltando ora. </p>
 
 <p> baci, <br> g <br></p>
 
