--- a/libri.html
+++ b/libri.html
@@ -22,6 +22,8 @@
       <li>The Man from the Future</li>
       <li>The Smartest Guys in the Room</li>
       <li>Reading in the Brain</li>
+      <li>Dealers of Lightning</li>
+      <li><u>Is Paris Burning?</u></li>
   </ol>
 
   <h3> 2022 </h3>
