prima pagina. per oggi basta

--- a/index.html
+++ b/index.html
@@ -40,6 +40,21 @@
   our goodwill in a vast and awesome universe. </p>
 <p style="font-size: 1.15rem"; align='right'> Jimmy Carter, <i>Voyager Golden Record</i><br></p>
 
+<p style="font-size: 1.15rem"; align='left'> 28 dicembre 2022</i></p>
+ <img src="images/peace.jpeg" alt="">
+ <p style="font-size:1.1rem", align='center'> sentendomi festivo </i><br></p>
+
+<p style="font-size: 1.15rem"; align='left'> 10 dicembre 2022</i></p>
+<p style="font-family: iA; font-size: 1.15rem"> Something about the interior life of a computer
+  remains infinitely interesting to me; it’s not romantic, but it is a romance.
+  You flip a bunch of microscopic switches really fast and culture pours out. </p>
+<p style="font-size: 1.15rem"; align='right'> Paul Ford, <i> Why I Still Love Tech</i><br></p>
+
+<p style="font-size: 1.15rem"; align='left'> 24 novembre 2022</i></p>
+<p style="font-size: 1.15rem"> qui sotto dove mi piacerebbe essere ora.</p>
+<p style="font-size: 1.15rem"> baci, <br> g </p>
+ <img src="images/sfondo.jpeg" alt="">
+ <p style="font-size: 1.15rem"; align='center'> Dragon's Back, Hong Kong </p>
 
 </main>
 </body>
