--- a/index.html
+++ b/index.html
@@ -17,6 +17,11 @@
 
 <p> baci, <br> g <br></p>
 
+<p style="font-size: 1.15rem"; align='left'> <br> 6 aprile 2023</i></p>
+<p style="font-size: 1.15rem"> <a href="riorientamento.html">riorientamento</a>:
+  "What is to be done?" (V. Lenin)
+</p>
+
 <p style="font-size: 1.15rem"; align='left'> <br> 14 marzo 2023</i></p>
 <p style="font-size: 1.15rem"> <a href="mille_euro.html">mille euro</a>:
   ho dato duemila euro (mille miei, mille adam) all'idraulico. questi i pensieri razionali e
