--- a/libri.html
+++ b/libri.html
@@ -24,6 +24,7 @@
       <li>Reading in the Brain</li>
       <li>Dealers of Lightning</li>
       <li><u>Is Paris Burning?</u></li>
+      <li>A Man on the Moon</li>
   </ol>
 
   <h3> 2022 </h3>
