--- a/index.html
+++ b/index.html
@@ -17,6 +17,11 @@
 
 <p> baci, <br> g <br></p>
 
+<p style="font-size: 1.15rem"; align='left'> <br> 7 aprile 2023</i></p>
+<p style="font-size: 1.15rem"> <a href="chatgpt-scpo-ii.html">dalla seconda lettera di giacomo ai rincoglioniti </a>. nel frattempo metto anche la <a href="chatgpt-scpo-i.html
+  ">prima</a>.
+</p>
+
 <p style="font-size: 1.15rem"; align='left'> <br> 6 aprile 2023</i></p>
 <p style="font-size: 1.15rem"> <a href="riorientamento.html">riorientamento</a>:
   "What is to be done?" (V. Lenin)
