--- a/index.html
+++ b/index.html
@@ -12,59 +12,63 @@
   <h1> ciao  </h1>
 <main class="lineheight">
   <p> un digital orto. what will your verse be? </p>
- <p> l’orto serve a me per raccogliere un po’ dei dati che creo e tenerli in un posto solo. qua i <a href="libri.html">libri</a>. qua tutto il resto delle <a href="articoli.html">robe che leggo</a>. qua un po' di <a href="quote.html">quote più o meno lunghe</a> che mi sono piaciute. poi
-  <a href="robe_visten.html">roba che vedo</a> così so dove ritrovarla. in <a href="https://open.spotify.com/playlist/37i9dQZF1Epm90W746OUYj?si=F1r2sYjcQteNSdW2ttTu4g">questa playlist</a> quello che sto ascoltando ora. </p>
+ <p align="left"> l’orto serve a me per raccogliere un po’ dei dati che creo e
+   tenerli in un posto solo. qua quello che leggo: <a href="libri.html">libri</a> 
+   e <a href="articoli.html">non libri</a>.
+   <a href="quote.html">qua</a> un po' di quote più o meno lunghe che mi sono piaciute. poi
+  <a href="robe-viste.html">roba che vedo</a> così so dove ritrovarla.
+  <a href="robe-scritte.html">qui</a> quello che ho scritto.
+  in <a href="https://open.spotify.com/playlist/37i9dQZF1Epm90W746OUYj?si=F1r2sYjcQteNSdW2ttTu4g">questa playlist</a> quello che sto ascoltando ora. </p>
 
 <p> baci, <br> g <br></p>
 
-<p style="font-size: 1.15rem"; align='left'> <br> 7 aprile 2023</i></p>
-<p style="font-size: 1.15rem"> <a href="chatgpt-scpo-ii.html">dalla seconda lettera di giacomo ai rincoglioniti</a>. nel frattempo metto anche la <a href="chatgpt-scpo-i.html
-  ">prima</a>.
+<p align="left"> <br> [07/04/23]</i></p>
+<p> <a href="robe scritte/chatgpt-scpo-ii.html">dalla seconda lettera di giacomo ai rincoglioniti</a>. nel frattempo metto anche la <a href="robe scritte/chatgpt-scpo-i.html">prima</a>.
 </p>
 
-<p style="font-size: 1.15rem"; align='left'> <br> 6 aprile 2023</i></p>
-<p style="font-size: 1.15rem"> <a href="riorientamento.html">riorientamento</a>:
+<p align="left"> <br> [06/04/23]</i></p>
+<p> <a href="robe scritte/riorientamento.html">riorientamento</a>:
   "What is to be done?" (V. Lenin)
 </p>
 
-<p style="font-size: 1.15rem"; align='left'> <br> 14 marzo 2023</i></p>
-<p style="font-size: 1.15rem"> <a href="mille_euro.html">mille euro</a>:
+<p align="left"> <br> [14/03/23]</i></p>
+<p> <a href="robe scritte/mille-euro.html">mille euro</a>:
   ho dato duemila euro (mille miei, mille adam) all'idraulico. questi i pensieri razionali e
   irrazionali prima di sapere se/quanto la proprietaria pagherà.
 </p>
 
-<p style="font-size: 1.15rem"; align='left'> <br> 16 gennaio 2023</i></p>
-<p style="font-family: iA; font-size: 1.15rem"> going down the stairs when
+<p align="left"> <br>[16/01/23]</p>
+<p> <i>going down the stairs when
   i had worked well, and that needed luck as well as discipline, was a wonderful
-  feeling and i was free then to walk anywhere in paris.
+  feeling and i was free then to walk anywhere in paris.</i> 
 </p>
-<p style="font-size: 1.15rem"; align='right'> Ernest Hemingway, <i>A Moveable Feast</i><br></p>
+<p align="right"> Ernest Hemingway, <i>A Moveable Feast</i></p>
 
 
-<p style="font-size: 1.15rem"; align='left'> 8 gennaio 2023</i></p>
-<p style="font-family: iA; font-size: 1.15rem"> We cast this message into the cosmos [...]: This is a present from a small
+<p align="left"> [08/01/23]</i></p>
+<p> <i>We cast this message into the cosmos [...]: This is a present from a small
   distant world, a token of our sounds, our science, our images, our music, our
   thoughts, and our feelings. We are attempting to survive our time so we may live
   into yours. We hope some day, having solved the problems we face, to join a community
   of galactic civilizations. This record represents our hope and our determination and
-  our goodwill in a vast and awesome universe. </p>
-<p style="font-size: 1.15rem"; align='right'> Jimmy Carter, <i>Voyager Golden Record</i><br></p>
+  our goodwill in a vast and awesome universe.</i> </p>
+<p align="right"> Jimmy Carter, <i>Voyager Golden Record</i></p>
 
-<p style="font-size: 1.15rem"; align='left'> 28 dicembre 2022</i></p>
+<p align="left"> [28/12/22]</i></p>
  <img src="images/peace.jpeg" alt="">
- <p style="font-size:1.1rem", align='center'> sentendomi festivo </i><br></p>
+ <p align="center"> sentendomi festivo </i><br></p>
 
-<p style="font-size: 1.15rem"; align='left'> 10 dicembre 2022</i></p>
-<p style="font-family: iA; font-size: 1.15rem"> Something about the interior life of a computer
+<p align="left"> [10/12/22]</i></p>
+<p> <i> Something about the interior life of a computer
   remains infinitely interesting to me; it’s not romantic, but it is a romance.
-  You flip a bunch of microscopic switches really fast and culture pours out. </p>
-<p style="font-size: 1.15rem"; align='right'> Paul Ford, <i> Why I Still Love Tech</i><br></p>
+  You flip a bunch of microscopic switches really fast and culture pours out. </i> </p>
+<p align="right"> Paul Ford, <i> Why I Still Love Tech</i></p>
 
-<p style="font-size: 1.15rem"; align='left'> 24 novembre 2022</i></p>
-<p style="font-size: 1.15rem"> qui sotto dove mi piacerebbe essere ora.</p>
-<p style="font-size: 1.15rem"> baci, <br> g </p>
- <img src="images/sfondo.jpeg" alt="">
- <p style="font-size: 1.15rem"; align='center'> Dragon's Back, Hong Kong </p>
+<p align="left"> [24/11/22] </i></p>
+<p> qui sotto dove mi piacerebbe essere ora.</p>
+<p> baci, <br> g </p>
+ <img src="images/dragons-back.jpeg" alt="">
+ <p align="center"> Dragon's Back, Hong Kong </p>
 
 </main>
 </body>
