--- a/quote.html
+++ b/quote.html
@@ -12,7 +12,15 @@
   <h1 align=left> <a href="index.html">orto</a> > quote </h1>
 <main class="lineheight">
 
-  <p><a href="wartime.html">C.S. Lewis, <i>Learning in War-Time</i></a> </p>
+<p> We shape our buildings; thereafter they shape us. </p>
+
+<p align='right'>W. Churchill</p>
+
+<p>Or, even if we ourselves should happen not to be interrupted by death or military service, 
+  why should we -- indeed how can we -- continue to take an interest in these placid occupations
+   when the lives of our friends and the liberties of Europe are in the balance? Is it not like 
+   fiddling while Rome burns?</p>
+<p align='right'> C.S. Lewis, <a href="wartime.html"><i>Learning in War-Time</i></a> </p>
 
 <p>Che cosa era Enrico Mattei? Un avventuriero? Un grande patriota? Uno di quegli italiani imprendibili, indefinibili, che sanno entrare in tutte le parti, capaci di grandissimo charme come di grandissimo furore, generosi ma con una memoria di elefante per le offese subite, abili nell'usare il denaro ma quasi senza toccarlo, sopra le parti ma capaci di usarle, cinici ma per un grande disegno...</p>
 
