--- a/robe scritte/chatgpt-scpo-i.html
+++ b/robe scritte/chatgpt-scpo-i.html
@@ -3,13 +3,13 @@
 <head>
   <title>chatgpt I - digital orto</title>
   <link rel="icon" type="image/x-icon" href="images/favicon.png">
-  <link rel="stylesheet" type="text/css" href="style.css">
+  <link rel="stylesheet" type="text/css" href="../style.css">
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Rubik">
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width">
   </head>
 <body>
-  <h1 align="left"> <a href="index.html">orto</a> > chatgpt I  </h1>
+  <h1 align="left"> <a href="../index.html">orto</a> > <a href="../robe-scritte.html">robe scritte</a> > chatgpt I  </h1>
 <main class="lineheight">
    <p> Da: Giacomo DA ROS <giacomo.daros@sciencespo.fr> </p>
      <p>   Data: 1 feb 2023, 12:24 +0100 </p>
