--- a/robe scritte/riorientamento.html
+++ b/robe scritte/riorientamento.html
@@ -3,13 +3,13 @@
 <head>
   <title>riorientamento - digital orto</title>
   <link rel="icon" type="image/x-icon" href="images/favicon.png">
-  <link rel="stylesheet" type="text/css" href="style.css">
+  <link rel="stylesheet" type="text/css" href="../style.css">
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Rubik">
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width">
   </head>
 <body>
-  <h1 align="left"> <a href="index.html">orto</a> > riorientamento  </h1>
+  <h1 align="left"> <a href="../index.html">orto</a> > <a href="../robe-scritte.html">robe scritte</a> > riorientamento  </h1>
 <main class="lineheight">
 
 <h2>tortuosità</h2>
